@@ -20,11 +20,16 @@ module org.apache.lucene.sandbox {
   requires org.apache.lucene.core;
   requires org.apache.lucene.queries;
   requires org.apache.lucene.facet;
+  // Optional (compile-time) dependency for the ivfaster SIMD kernels. `static` so the module still
+  // resolves on a JVM started WITHOUT `--add-modules jdk.incubator.vector`; the kernels detect that
+  // at runtime and fall back to scalar loops.
+  requires static jdk.incubator.vector;
 
   exports org.apache.lucene.payloads;
   exports org.apache.lucene.sandbox.codecs.dedup;
   exports org.apache.lucene.sandbox.codecs.faiss;
   exports org.apache.lucene.sandbox.codecs.idversion;
+  exports org.apache.lucene.sandbox.codecs.ivfaster;
   exports org.apache.lucene.sandbox.codecs.quantization;
   exports org.apache.lucene.sandbox.document;
   exports org.apache.lucene.sandbox.queries;
@@ -43,5 +48,6 @@ module org.apache.lucene.sandbox {
       org.apache.lucene.sandbox.codecs.idversion.IDVersionPostingsFormat;
   provides org.apache.lucene.codecs.KnnVectorsFormat with
       org.apache.lucene.sandbox.codecs.faiss.FaissKnnVectorsFormat,
-      org.apache.lucene.sandbox.codecs.dedup.DedupHnswVectorsFormat;
+      org.apache.lucene.sandbox.codecs.dedup.DedupHnswVectorsFormat,
+      org.apache.lucene.sandbox.codecs.ivfaster.IVFasterVectorsFormat;
 }
